# swc-plugin-ignore-import

./: .eslintrc.js  .eslintrc.json  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  eslint.config.js  index.ts  jest.config.js  npm-shrinkwrap.json  package.json  renovate.json  usage.test.js
.cargo/: config.toml
.github/workflows/: build-and-test.yml  linting-and-unit-testing.yml
src/: lib.rs
test/: plugin.test.js  visit.test.js
