[package]
name = "swc-plugin-ignore-import"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"
 
# Strip debug symbols
strip = "symbols"

[dependencies]
regex = "1.11.1"
serde = "1.0.203"
serde_json = "1.0.89"

# https://plugins.swc.rs/versions/range/138
swc_core = { version = "9.0", features = ["ecma_plugin_transform"] }

# .cargo/config.toml defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.